--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"@material/theme": "^13.0.0",
 		"@material/typography": "^13.0.0",
 		"@mdi/js": "^7.0.96",
-		"@smui/button": "^6.0.0",
+		"@smui/button": "^6.1.4",
 		"@smui/icon-button": "^6.0.0",
 		"@smui/top-app-bar": "^6.0.0",
 		"@sveltejs/adapter-auto": "next",
@@ -32,5 +32,8 @@
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sentry/node": "^7.30.0"
+	}
 }
