--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@material/theme": "^13.0.0",
 		"@material/typography": "^13.0.0",
 		"@mdi/js": "^7.0.96",
+		"@smui-extra/bottom-app-bar": "^7.0.0-beta.0",
 		"@smui/button": "^6.1.4",
 		"@smui/icon-button": "^6.0.0",
 		"@smui/top-app-bar": "^6.0.0",
