--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@material/theme": "^13.0.0",
-		"@material/typography": "^13.0.0",
 		"@mdi/js": "^7.0.96",
+		"from": "^0.1.7",
+		"import": "^0.0.6",
+		"@popperjs/core": "^2.11.6",
+		"adapter": "^1.0.0-beta.10",
+		"@sentry/node": "^7.30.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.4",
 		"@sveltejs/kit": "next",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
@@ -30,8 +34,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@popperjs/core": "^2.11.6",
-		"@sentry/node": "^7.30.0",
 		"boosted": "^5.2.3"
 	}
 }
