--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
 		"@fortawesome/fontawesome-free": "^6.4.0",
 		"@fortawesome/fontawesome-svg-core": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@nestjs/swagger": "^6.3.0",
 		"axios": "^1.3.5",
 		"boosted": "^5.2.3",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.0",
 		"crypto-js": "^4.1.1",
 		"jsonwebtoken": "^9.0.0",
 		"jws": "^4.0.0",
