--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
 		"@types/crypto-js": "^4.1.1",
 		"@types/jsonwebtoken": "^9.0.1",
 		"adapter": "^1.0.0-beta.10",
+		"boosted": "^5.2.3",
 		"from": "^0.1.7",
 		"import": "^0.0.6",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"sass": "^1.57.1",
 		"svelte": "^3.49.0",
-		"boosted": "^5.2.3",
 		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
 		"swagger-client": "^3.19.6",
@@ -43,11 +43,13 @@
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@nestjs/swagger": "^6.3.0",
 		"axios": "^1.3.5",
+		"chart.js": "^4.3.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"crypto-js": "^4.1.1",
 		"jsonwebtoken": "^9.0.0",
 		"jws": "^4.0.0",
-		"safe-buffer": "^5.2.1"
+		"safe-buffer": "^5.2.1",
+		"svelte-chartjs": "^3.1.2"
 	}
 }
