--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,15 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		/**
-		  These are the settings I like.
-			*/
-		"noImplicitAny": true
+		"noImplicitAny": true,
+
+		// Nouvelle configuration pour éviter l'erreur 'importsNotUsedAsValues'
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"preserveSymlinks": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictPropertyInitialization": true,
+		"strictBindCallApply": true
 	}
 }
